cambio icono,variables
sse agrego un icono y se cambio el nombre a las variables

--- a/src/Ejercicio2/ConversorDeTemperatura.form
+++ b/src/Ejercicio2/ConversorDeTemperatura.form
@@ -17,7 +17,7 @@
         </DimensionLayout>
       </Layout>
     </Container>
-    <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+    <Component class="javax.swing.ButtonGroup" name="grupoBotones">
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -99,7 +99,7 @@
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="tituloLabel" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" attributes="0">
+                                  <Group type="102" alignment="0" attributes="0">
                                       <Component id="botonFahren" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                                       <Component id="botonKelvin" min="-2" max="-2" attributes="0"/>
@@ -115,8 +115,8 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="botonConvertir" min="-2" pref="120" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
+                      <Component id="botonConvertir" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -135,9 +135,9 @@
                           <Component id="botonKelvin" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="botonRadianes" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="33" max="32767" attributes="0"/>
-                      <Component id="botonConvertir" min="-2" pref="43" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <EmptySpace pref="37" max="32767" attributes="0"/>
+                      <Component id="botonConvertir" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -183,6 +183,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="botonConvertir">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="2" name="C:\Users\Admin\Desktop\output-onlinepngtools.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Convertir"/>
               </Properties>
               <Events>
